--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -60,7 +60,10 @@
   "SETTINGS_TAB_IMAGE": "Image",
   "SETTINGS_TAB_BASIC": "Basic",
   "SETTINGS_TAB_MODEL": "Models",
+  "SETTINGS_INFERENCE_BACKEND": "Inference Backend",
   "SETTINGS_INFERENCE_DEVICE": "Inference Device",
+  "SETTINGS_TEXT_INFERENCE_MODEL": "Text Inference Model",
+  "SETTINGS_TEXT_INFERENCE_NPU_ONLY": "Show only NPU compatible models",
   "SETTINGS_LLM_BACKEND": "LLM Backend",
   "SETTINGS_MODEL_IMAGE_SIZE": "Image Size",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "Image Resolution",
