--- a/WebUI/src/assets/i18n/es.json
+++ b/WebUI/src/assets/i18n/es.json
@@ -60,7 +60,10 @@
   "SETTINGS_TAB_IMAGE": "Imagen",
   "SETTINGS_TAB_BASIC": "Configuración básica",
   "SETTINGS_TAB_MODEL": "Modelos",
+  "SETTINGS_INFERENCE_BACKEND": "Backend de inferencia",
   "SETTINGS_INFERENCE_DEVICE": "Dispositivo de inferencia",
+  "SETTINGS_TEXT_INFERENCE_MODEL": "Modelo de inferencia de texto",
+  "SETTINGS_TEXT_INFERENCE_NPU_ONLY": "Mostrar solo modelos compatibles con NPU",
   "SETTINGS_LLM_BACKEND": "Backend de LLM",
   "SETTINGS_MODEL_IMAGE_SIZE": "Tamaño de la imagen",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "Resolución de la imagen",
