--- a/WebUI/src/assets/i18n/id.json
+++ b/WebUI/src/assets/i18n/id.json
@@ -60,7 +60,10 @@
   "SETTINGS_TAB_IMAGE": "Gambar",
   "SETTINGS_TAB_BASIC": "Pengaturan Dasar",
   "SETTINGS_TAB_MODEL": "Model",
+  "SETTINGS_INFERENCE_BACKEND": "Backend Inferensi",
   "SETTINGS_INFERENCE_DEVICE": "Perangkat Inferensi",
+  "SETTINGS_TEXT_INFERENCE_MODEL": "Model Inferensi Teks",
+  "SETTINGS_TEXT_INFERENCE_NPU_ONLY": "Tampilkan hanya model yang kompatibel dengan NPU",
   "SETTINGS_LLM_BACKEND": "LLM Backend",
   "SETTINGS_MODEL_IMAGE_SIZE": "Ukuran Gambar",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "Resolusi Gambar",
