--- a/WebUI/src/assets/i18n/it.json
+++ b/WebUI/src/assets/i18n/it.json
@@ -60,7 +60,10 @@
   "SETTINGS_TAB_IMAGE": "Immagine",
   "SETTINGS_TAB_BASIC": "Base",
   "SETTINGS_TAB_MODEL": "Modelli",
+  "SETTINGS_INFERENCE_BACKEND": "Backend di Inferenza",
   "SETTINGS_INFERENCE_DEVICE": "Dispositivo di inferenza",
+  "SETTINGS_TEXT_INFERENCE_MODEL": "Modello di Inferenza Testuale",
+  "SETTINGS_TEXT_INFERENCE_NPU_ONLY": "Mostra solo modelli compatibili con NPU",
   "SETTINGS_LLM_BACKEND": "Backend LLM",
   "SETTINGS_MODEL_IMAGE_SIZE": "Dimensione immagine",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "Risoluzione immagine",
