--- a/WebUI/src/assets/i18n/ja.json
+++ b/WebUI/src/assets/i18n/ja.json
@@ -60,7 +60,10 @@
   "SETTINGS_TAB_IMAGE": "画像",
   "SETTINGS_TAB_BASIC": "基本設定",
   "SETTINGS_TAB_MODEL": "モデル",
+  "SETTINGS_INFERENCE_BACKEND": "推論バックエンド",
   "SETTINGS_INFERENCE_DEVICE": "推論デバイス",
+  "SETTINGS_TEXT_INFERENCE_MODEL": "テキスト推論モデル",
+  "SETTINGS_TEXT_INFERENCE_NPU_ONLY": "NPU互換モデルのみ表示",
   "SETTINGS_LLM_BACKEND": "LLM バックエンド",
   "SETTINGS_MODEL_IMAGE_SIZE": "画像サイズ",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "画像解像度",
