--- a/WebUI/src/assets/i18n/pl.json
+++ b/WebUI/src/assets/i18n/pl.json
@@ -60,7 +60,10 @@
   "SETTINGS_TAB_IMAGE": "Obraz",
   "SETTINGS_TAB_BASIC": "Podstawowe",
   "SETTINGS_TAB_MODEL": "Modele",
+  "SETTINGS_INFERENCE_BACKEND": "Backend wnioskowania",
   "SETTINGS_INFERENCE_DEVICE": "Urządzenie do wnioskowania",
+  "SETTINGS_TEXT_INFERENCE_MODEL": "Model wnioskowania tekstowego",
+  "SETTINGS_TEXT_INFERENCE_NPU_ONLY": "Pokaż tylko modele kompatybilne z NPU",
   "SETTINGS_LLM_BACKEND": "LLM Backend",
   "SETTINGS_MODEL_IMAGE_SIZE": "Rozmiar obrazu",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "Rozdzielczość obrazu",
