--- a/WebUI/src/assets/i18n/th.json
+++ b/WebUI/src/assets/i18n/th.json
@@ -60,7 +60,10 @@
   "SETTINGS_TAB_IMAGE": "ภาพ",
   "SETTINGS_TAB_BASIC": "พื้นฐาน",
   "SETTINGS_TAB_MODEL": "โมเดล",
+  "SETTINGS_INFERENCE_BACKEND": "แบ็กเอนด์การอนุมาน",
   "SETTINGS_INFERENCE_DEVICE": "อุปกรณ์อนุมาน",
+  "SETTINGS_TEXT_INFERENCE_MODEL": "โมเดลการอนุมานข้อความ",
+  "SETTINGS_TEXT_INFERENCE_NPU_ONLY": "แสดงเฉพาะโมเดลที่เข้ากันได้กับ NPU",
   "SETTINGS_LLM_BACKEND": "แบ็กเอนด์ LLM",
   "SETTINGS_MODEL_IMAGE_SIZE": "ขนาดภาพ",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "ความละเอียดของภาพ",
