--- a/WebUI/src/assets/i18n/tr.json
+++ b/WebUI/src/assets/i18n/tr.json
@@ -60,7 +60,10 @@
   "SETTINGS_TAB_IMAGE": "Resim",
   "SETTINGS_TAB_BASIC": "Temel",
   "SETTINGS_TAB_MODEL": "Modeller",
+  "SETTINGS_INFERENCE_BACKEND": "Çıkarım Backend'i",
   "SETTINGS_INFERENCE_DEVICE": "Inference Donanımı",
+  "SETTINGS_TEXT_INFERENCE_MODEL": "Metin Çıkarım Modeli",
+  "SETTINGS_TEXT_INFERENCE_NPU_ONLY": "Yalnızca NPU uyumlu modelleri göster",
   "SETTINGS_LLM_BACKEND": "LLM Backend",
   "SETTINGS_MODEL_IMAGE_SIZE": "Resim Boyutu",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "Resim Çözünürlüğü",
