--- a/WebUI/src/assets/i18n/vi.json
+++ b/WebUI/src/assets/i18n/vi.json
@@ -60,7 +60,10 @@
   "SETTINGS_TAB_IMAGE": "Hình ảnh",
   "SETTINGS_TAB_BASIC": "Cơ bản",
   "SETTINGS_TAB_MODEL": "Mô hình",
+  "SETTINGS_INFERENCE_BACKEND": "Backend suy luận",
   "SETTINGS_INFERENCE_DEVICE": "Thiết bị suy luận",
+  "SETTINGS_TEXT_INFERENCE_MODEL": "Mô hình suy luận văn bản",
+  "SETTINGS_TEXT_INFERENCE_NPU_ONLY": "Chỉ hiển thị các mô hình tương thích NPU",
   "SETTINGS_LLM_BACKEND": "Backend LLM",
   "SETTINGS_MODEL_IMAGE_SIZE": "Kích thước ảnh",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "Độ phân giải ảnh",
