--- a/WebUI/src/assets/i18n/zh-CN.json
+++ b/WebUI/src/assets/i18n/zh-CN.json
@@ -60,7 +60,10 @@
   "SETTINGS_TAB_IMAGE": "图像生成",
   "SETTINGS_TAB_BASIC": "基本设置",
   "SETTINGS_TAB_MODEL": "模型",
+  "SETTINGS_INFERENCE_BACKEND": "推理后端",
   "SETTINGS_INFERENCE_DEVICE": "推理设备",
+  "SETTINGS_TEXT_INFERENCE_MODEL": "文本推理模型",
+  "SETTINGS_TEXT_INFERENCE_NPU_ONLY": "仅显示兼容NPU的模型",
   "SETTINGS_LLM_BACKEND": "大语言模型后端",
   "SETTINGS_MODEL_IMAGE_SIZE": "图片大小",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "图片分辨率",
