--- a/WebUI/src/assets/i18n/zh-TW.json
+++ b/WebUI/src/assets/i18n/zh-TW.json
@@ -60,7 +60,10 @@
   "SETTINGS_TAB_IMAGE": "圖片",
   "SETTINGS_TAB_BASIC": "基本設定",
   "SETTINGS_TAB_MODEL": "模型",
+  "SETTINGS_INFERENCE_BACKEND": "推論後端",
   "SETTINGS_INFERENCE_DEVICE": "推論裝置",
+  "SETTINGS_TEXT_INFERENCE_MODEL": "文本推論模型",
+  "SETTINGS_TEXT_INFERENCE_NPU_ONLY": "僅顯示兼容NPU的模型",
   "SETTINGS_LLM_BACKEND": "LLM後端",
   "SETTINGS_MODEL_IMAGE_SIZE": "圖片尺寸",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "圖像解析度",
