--- a/WebUI/src/assets/i18n/de.json
+++ b/WebUI/src/assets/i18n/de.json
@@ -60,7 +60,10 @@
   "SETTINGS_TAB_IMAGE": "Bild",
   "SETTINGS_TAB_BASIC": "Basis",
   "SETTINGS_TAB_MODEL": "Modelle",
+  "SETTINGS_INFERENCE_BACKEND": "Inferenz-Backend",
   "SETTINGS_INFERENCE_DEVICE": "Inferenz-Hardware",
+  "SETTINGS_TEXT_INFERENCE_MODEL": "Text-Inferenz-Modell",
+  "SETTINGS_TEXT_INFERENCE_NPU_ONLY": "Nur NPU-kompatible Modelle anzeigen",
   "SETTINGS_LLM_BACKEND": "LLM-Backend",
   "SETTINGS_MODEL_IMAGE_SIZE": "Bildgröße",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "Bildauflösung",
