--- a/WebUI/src/assets/i18n/ko.json
+++ b/WebUI/src/assets/i18n/ko.json
@@ -60,7 +60,10 @@
   "SETTINGS_TAB_IMAGE": "이미지",
   "SETTINGS_TAB_BASIC": "기본",
   "SETTINGS_TAB_MODEL": "모델",
+  "SETTINGS_INFERENCE_BACKEND": "추론 백엔드",
   "SETTINGS_INFERENCE_DEVICE": "추론 장치",
+  "SETTINGS_TEXT_INFERENCE_MODEL": "텍스트 추론 모델",
+  "SETTINGS_TEXT_INFERENCE_NPU_ONLY": "NPU 호환 모델만 표시",
   "SETTINGS_LLM_BACKEND": "LLM Backend",
   "SETTINGS_MODEL_IMAGE_SIZE": "이미지 크기",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "이미지 해상도",
