Changes for Inpaint and text updated

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -281,30 +281,24 @@
   "RAG_SEARCHABLE_DOCUMENTS": "Searchable Documents",
   "RAG_CLEAR_ALL": "Clear All",
   "DEMO_OK_GOT_IT": "Okay, Got it",
-  "DEMO_CREATE_TITLE": "Create",
   "DEMO_CREATE_CENTER_CONTENT": "Convert simple text prompts into stunning images in seconds.",
-  "DEMO_CREATE_CENTER_CONTENT_2": "Check out our",
-  "DEMO_AND": "and",
-  "DEMO_CREATE_CENTER_CONTENT_3": "features as well.",
   "DEMO_CREATE_POPUP_CONTENT_1": "Tell AI Playground what your image should look like. Then click the \"Generate\" button.",
   "DEMO_YOU_COULD_TYPE": "You could type",
   "DEMO_CREATE_POPUP_CONTENT_3": "a warrior with flowing hair, purple cloak and black armor",
-  "DEMO_ENHANCE_TITLE": "Enhance",
   "DEMO_ENHANCE_HEADING": "Use AI to transform your photos with editing and upscaling tools.",
   "DEMO_ENHANCE_UPSCALE_TEXT": "Upload your image of choice into AI Playground and set the upscale value",
   "DEMO_ENHANCE_VARIATION_TEXT": "Use the variation slider to add creativity to your image. You can also type in prompts to add details to an image",
   "DEMO_ENHANCE_IMAGE_PROMPT_TEXT": "Type in your prompt describing how you would like to stylise your image",
   "DEMO_ENHANCE_IMAGE_PROMPT_TEXT_DETAIL": "Move the slider left to preserve more of the original image, or right to align more closely with your text prompt",
-  "DEMO_ENHANCE_INPAINT_ONE": "Select areas of the image to repair or replace using the pen tool",
-  "DEMO_ENHANCE_INPAINT_TWO": "Type in what you want to fix or add to the highlighted area",
+  "DEMO_ENHANCE_INPAINT_ONE": "Select areas of the image to repair or replace using the pen tool.",
+  "DEMO_ENHANCE_INPAINT_TWO": "Type in what you want to fix or add to the highlighted area.",
   "DEMO_ENHANCE_INPAINT_THREE": "Select repair or fill, and use the slider to control how much the result resembles the original image (left) or your prompt (right).",
   "DEMO_ENHANCE_OUTPAINT_ONE": "Describe how you'd like to expand the image",
   "DEMO_ENHANCE_OUTPAINT_TWO": "Use the arrows below to choose the direction of the expression",
   "DEMO_EHNAHCE_OUTPAINT_THREE": "Move the slider left to preserve more of the original image, or right to align more closely with your text prompt.",
-  "DEMO_ANSWER_TITLE": "Answer",
   "DEMO_ANSWER_HEADING": "Generate intelligent AI-assisted answer for research and writing.",
   "DEMO_ANSWER_GENERATE_TEXT": "Use the Answer Tab to search for specific information, or upload files to generate summarized insights tailored to your needs.",
-  "DEMO_ANSWER_GENERATE_HELP_TEXT": "help me write a research paper on ...",
+  "DEMO_ANSWER_GENERATE_HELP_TEXT": "help me write a research paper on cats ...",
   "DEMO_NEED_HELP": "Need help?",
   "DEMO_ENHANCE_IMAGE_TEXT": "Type in your prompt describing how you would like to stylise your image",
   "DEMO_ENHANCE_IMAGE_TEXT_2": "Move the slider left to preserve more of the original image, or right to align more closely with your text prompt.",
